# todoistBot

./: Dockerfile  docker-compose.yml  pyproject.toml
.github/: main.yml
.github/workflows/: main.yml
tests/: test_todoistbot.py
todoistbot/: config.properties  todoistBot.py
