[tool.poetry]
name = "todoistBot"
version = "0.1.0"
description = ""
authors = ["a-chmil <a-chmil@yandex-team.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
pytelegrambotapi = "^4.6.0"
expiringdict = "^1.2.2"
todoist-api-python = "^v 2.0.2"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
